--- a/src/styles/components/video-player.css
+++ b/src/styles/components/video-player.css
@@ -100,6 +100,7 @@
     padding: 0.8rem 0;
     opacity: 0;
     pointer-events: none;
+    background-color: var(--white-75);
     backdrop-filter: blur(10px);
     transition: opacity 0.1s ease, transform 0.3s ease;
 
